src/index.css
@import "~slick-carousel/slick/slick.css"; 
@import "~slick-carousel/slick/slick-theme.css";

:root {
  --gray-main: #A6A6A6;
  --blue-main:  #024687;
  --black-main: #0F0000;
  --white-main: #FFFFFF;
  --light-blue-main: #3E69FF;

}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

#container {
  position: relative;
  width: 90%;
  margin: 0 auto;
}

#container-one {
  width: 100%;
  margin: 0 auto;
}

.max {
  margin: 0 auto;
}

header {
  position: fixed;
  z-index: 100;
  width: 100%;
  height: 80px;
  display: flex;
  align-items: center;
  background-color: #fff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  margin: 0 auto;
}

header .max {
  width: 100%;
  display: flex;
  align-items: center;
}

header .max .logo {
  display: flex;
  justify-content: flex-start;
  padding-left: 45px;
  width: 40%;
}

header .max h2 {
  color: var(--blue-main);
  font-size: 2.5rem;
}

header .max nav {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  padding-right: 45px;
  width: 60%;
}

header .max nav a {
  text-decoration: none;
  color: var(--gray-main);
  margin: 0 15px;
  cursor: pointer;
}

header .max nav a:hover {
  color: var(--blue-main);
}

header #check, label {
  display: none;
}

header ul {
  display: none;
}

/* Landing start */
#landing {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  overflow-x: hidden;
}

#landing .img-landing {
  position: absolute;
  width: 1250px;
  top: 0;
  left: 0;
  /* z-index: 1; */
}

#landing .max {
  position: relative;
  /* z-index: 2; */
  padding-top: 3rem;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  height: 65rem;
}

#landing .descrip {
  width: 50%;
  color: var(--white-main);
  padding: 10px 80px;
  margin-top: 90px;
}

#landing .descrip h1 {
  font-size: 2rem;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#landing .descrip h2 {
  font-size: 3.5rem;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#landing .descrip p {
  font-size: 1rem;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  text-align: justify;
  margin-top: 30px;
}

#landing .descrip button {
  padding: 15px;
  margin-top: 40px;
  font-size: 16px;
  font-weight: bold;
  color: var(--blue-main);
  background: var(--white-main);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  border: 1px solid #fff;
  cursor: pointer;
}

/* #landing .descrip button:hover {
    background-color: var(--blue-main);
    color: var(--white-main);
    border: 1px solid var(--blue-main);
} */

#landing .max .descrip .network {
  display: flex;
  margin-top: 200px;
}

#landing .max .descrip .network img {
  padding-right: 30px;
}

#landing .intro img {
  width: 400px;
  border-radius: 35px;
  margin-top: 70px;
}
/* Landing end */

/* values start */
#values .bulb {
  position: absolute;
  z-index: 0;
  border-radius: 35px;
  margin-left: 130px;
  box-shadow: 0px 4px 4px 0px #00000040;
  filter: drop-shadow(5px 7px 10px #3EC4FE);
}

#values .rectangle {
  position: absolute;
  width: 100%;
  height: 170rem;
  z-index: 0;
  margin-top: 180px;
}

#values .max {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

#values .descrip {
  width: 60%;
  padding-left: 50px;
}

#values .box {
  width: 399px;
  height: 356px;
  margin-top: 30px;
  background-color: var(--white-main);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 70px;
  padding: 20px;
}

#values .box h1 {
  padding: 20px 20px;
  font-weight: 700;
  font-size: 40px;
  line-height: 47px;
  color: var(--blue-main);
}

#values .box p {
  padding: 20px 20px;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  text-align: justify;
}

#values .icons {
  width: 35%;
  height: 50%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

#values .icon {
  width: 200px;
  padding: 15px;
}

#values .icon img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

#values .icon h4 {
  padding-top: 20px;
  text-align: center;
}
/* values end */

/* Clientes start */
#clientes {
  position: relative;
  height: 48rem;
  margin-top: 90px;
  background: radial-gradient(86.77% 115.05% at -3.89% 4.67%, #3ED9FE 28.13%, #024687 81.25%);
}

#clientes h1 {
  color: var(--white-main);
  font-size: 4rem;
  padding: 60px 40px;
}

#clientes .max .grupo_clientes {
  display: flex;
  flex-direction: row;
  margin-left: 70px;
  width: 90%;
}

#clientes .max .card_cliente {
  display: flex;
  flex-direction: column;
  width: 312px;
  /* height: 500px; */
  height: 420px;
  border-radius: 70px;
  margin: 0 40px;
  background: no-repeat;
}

#clientes .max .card_cliente .content_cliente {
  position: relative;
  background-color: #FFFFFF;
  flex-direction: column;
  margin-top: auto;
  border-radius: 0 0 70px 70px;
  height: 50%;
  padding: 30px;
} 

#clientes .max .card_cliente .content_cliente h2 {
  color: var(--blue-main);
  font-size: 1.8rem;
} 

#clientes .max .card_cliente .content_cliente .text_one {
  color: var(--black-main);
  font-size: 1rem;
  padding: 10px 0;
  text-indent: 1.5em;
  text-align: justify;
}

#clientes .max .card_cliente .content_cliente .text_two {
  color: var(--light-blue-main);
  font-weight: 800; 
  font-size: 1rem;
} 
/* clientes end */

/* servicios start */
#servicios {
  position: relative;
}

#servicios h1 {
  color: var(--blue-main);
  font-size: 4rem;
  padding: 60px 40px;
}

#servicios .grupo_servicios {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
}

#servicios .descrip_right {
  position: relative;
  display: flex;
  justify-content: flex-end;
  width: 100%;
  margin-bottom: 180px;
}

#servicios .descrip_left {
  position: relative;
  display: flex;
  justify-content: start;
  width: 100%;
  margin-bottom: 180px;
}

#servicios .box {
  width: 90%;
  height: 356px;
  background-color: var(--white-main);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 70px;
  padding: 20px;
  display: flex;
}

#servicios .descrip_right .box .text {
  width: 40%;
  text-align: justify;
  padding: 20px 50px;
}

#servicios .descrip_left .box .text {
  width: 40%;
  text-align: justify;
  padding: 20px 50px;
  margin-left: 120px;
}

#servicios .box .text h2 {
  font-size: 2.5rem;
  padding: 20px 0;
}

#servicios .box .text p {
  font-size: 1.2rem;
}

#servicios .descrip_right .box .img {
  text-align: right;
  width: 50%;
  height: 100%;
}

#servicios .descrip_left .box .img {
  text-align: center;
  width: 50%;
  height: 100%;
}

#servicios .box .img img {
  position: relative;
  border-radius: 70px;
  filter: drop-shadow(5px 7px 10px #3EC4FE);
  top: -150px;
  /* width: 70%; */
  width: 410px;
  height: 344px;
}

/* servicios end */

/* Contacto star */
#contacto h2 {
  color: var(--blue-main);
  font-size: 4rem;
  padding: 0 40px 60px 40px;
  /* font-size: 2.5rem;
  text-align: left;
  margin-bottom: 20px;
  color: var(--blue-main); */
}

#contacto .max {
  position: relative;
  display: flex;
  width: 100%;
  height: 100%;
  padding: 10px 0;
  justify-content: space-evenly;
  text-align: left;
}

#contacto .datos {
  display: flex;
  flex-direction: column;
  width: 30%;
}

#contacto .datos input {
  width: 100%;
  height: 30px;
  margin: 5px;
  border-radius: 5px;
  box-sizing: border-box;
  margin-bottom: 35px;
}

#contacto .max .datos label {
  display: block;
  font-weight: bold;
  text-indent: 0.5em;
}

#contacto .mensaje {
  display: flex;
  flex-direction: column;
  width: 30%;
}

#contacto .mensaje textarea {
  width: 100%;
  height: 45%;
  margin: 5px;
  border-radius: 5px;
}

#contacto .max .mensaje label {
  display: block;
  font-weight: bold;
  text-indent: 0.5em;
}

#contacto .mensaje button {
  margin-top: 5px;
  background-color: var(--blue-main);
  width: 50%;
  margin-left: auto;
  margin-top: 35px;
  border-radius: 10px;
  padding: 15px 0;
}

/* Footer star */
footer {
  position: relative;
  display: flex;
  width: 100%;
  background-color: var(--blue-main);
  height: 250px;
  margin-top: 100px;
}

footer .max {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 100%;
}

footer .network {
  display: flex;
  align-items: center;
  justify-content: center;
}

footer .network a {
  margin: 4px;
}

footer .socials {
  display: inherit;
  flex-direction: column;
  justify-content: space-evenly;
}

footer .socials h3 {
  font-size: 2.5rem;
  color: var(--white-main);
}

footer .utilities {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

footer .utilities a {
  margin: 5px;
  text-decoration: none;
  font-size: 1.2rem;
  font-weight: 400;
  color: var(--white-main);
  cursor: pointer;
}
/* Footer end */


@media (max-width: 774px) {
  header i{
      font-size: 24px;
      cursor: pointer;
      padding-right: 20px;
  }

  header label {
      display: block;
  }

  header nav a {
      display: none;
  }

  header ul {
    display: block;
  }

  .menuNav {
    overflow-y: scroll;
    list-style: none;
    position: fixed;
    margin-top: 80px;
    top: 0;
    background: var(--white-main);
    right: 0;
    height: 80vh;
    width: 0;
    overflow: hidden;
    max-width: 290px;
    z-index: 9;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  }
  
  .menuNav.showMenu {
    width: 100%;
  }

  header a {
    display: block;
    padding: 10px 100px;
    text-decoration: none;
    color: var(--blue-main);
    text-transform: uppercase;
    font-weight: bold;
    cursor: pointer;
  }
  header a:hover {
    color: var(--gray-main);
  }
  
  .menuNav li:first-child {
    margin-top: 2rem;
  }

  #empty .box {
    height: 100%;
    margin-bottom: 0;
  }

  .testimonials {
    margin-top: 150px;
  } 

}

@media (max-width: 947px ) {
  #landing .descrip {
      width: 100%;
      color: var(--white-main);
  }
}

@media (max-width: 1142px) {
  #values .descrip {
      width: 100%;
  }

  #values .icons {
      justify-content: flex-start;
      width: 100%;
      margin-top: 160px;
      justify-content: center;
  }
}

